src/main/resources/tests/Semantics/bad/whileLoop1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestLoops is
   variable1 : integer;
   variable2 : character;
begin
   -- Test while loop with errors
   while variable2 <= 10 loop -- Error: cannot compare character with integer
      put(variable2);
      variable2 := variable2 + 1;
   end loop;
end TestLoops;
